# qa_guru_14_poetry_hw16

./: pyproject.toml
