[tool.poetry]
name = "qa-guru-14-poetry-hw16"
version = "0.1.0"
description = ""
authors = ["Azamat Abdurashidov <royalty5611@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selene = "2.0.0rc9"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
